[package]
name = "adhan"
version = "1.0.2"
edition = "2018"
license = "MIT"
rust-version = "1.59"

[profile.size]
inherits = "release"
lto = "fat"
codegen-units = 1
opt-level = "z"
panic = "abort"
strip = "symbols"
debug = 0

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.12", features = ["derive"] }
# For upstream usage
# salah = { version = "0.8.0" }
# For usage before merging upstream
salah = { git = "https://github.com/N-Hoque/salah", branch = "v0.9.0" }
# For development purposes only
# salah = { path = "../salah" }
rodio = "0.17.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_yaml = "0.9.32"
directories-next = "2.0.0"

[package.metadata.cross.target.aarch64-unknown-linux-gnu]
image = "adhan-aarch64"

[package.metadata.cross.target.armv7-unknown-linux-gnueabihf]
image = "adhan-armv7"
