[package]
name = "adhan"
version = "1.0.3"
edition = "2021"
license = "MIT"
rust-version = "1.70"

[profile.size]
inherits = "release"
lto = "fat"
codegen-units = 1
opt-level = "z"
panic = "abort"
strip = "symbols"
debug = 0

[dependencies]
# For upstream usage
# salah = { version = "0.8.0" }
# For usage before merging upstream
salah = { git = "https://github.com/N-Hoque/salah", branch = "v0.9.0" }
# For development purposes only
# salah = { path = "../salah" }
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.20", features = ["derive"] }
directories-next = "2.0.0"
log = "0.4.22"
rand = "0.8.5"
rodio = "0.20.1"
serde = { version = "1.0.214", features = ["derive"] }
serde_yaml = "0.9.34"
simplelog = "0.12.2"
thiserror = "2.0.1"

[package.metadata.cross.target.aarch64-unknown-linux-gnu]
image = "adhan-aarch64"

[package.metadata.cross.target.armv7-unknown-linux-gnueabihf]
image = "adhan-armv7"
